# quant-x-tauri

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json
src/: App.tsx  router.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/broker/: alpaca.rs  env.rs  error.rs  etrade.rs  ibkr.rs  mod.rs  paper.rs  schwab.rs  tastytrade.rs  tradestation.rs  tradingview.rs
src-tauri/src/commands/: broker.rs  db.rs  kill_switch.rs  market_data.rs  mod.rs  prop_firm.rs
src-tauri/src/data/: alpaca_data.rs  mod.rs  tradingview.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/db/repositories/: bars.rs  config_repo.rs  kill_switch.rs  mod.rs  notifications.rs  orders.rs  positions.rs  prop_firm.rs  strategy.rs  trades.rs
src-tauri/src/prop_firm/: mod.rs  phase_controller.rs  risk_adapter.rs  rule_fetcher.rs  safety_adapter.rs  trailing_drawdown.rs
src-tauri/src/prop_firm/presets/: apex.rs  ftmo.rs  lucid.rs  mod.rs  topstep.rs
src-tauri/src/ws/: mod.rs
src/components/: Dashboard.tsx
src/components/account/: AccountSummary.tsx  ProfileView.tsx
src/components/ai/: AIHarnessView.tsx  AIView.tsx  AgentPanel.tsx  AgentsView.tsx  ChatView.tsx  ModelManagerView.tsx  OpenSpaceView.tsx  TeamView.tsx
src/components/backtest/: BacktesterView.tsx  (+2 more)
src/hooks/: useKillSwitch.ts  usePaperTrading.ts  useTauriEvents.ts
src/store/: dashboard.ts
src/types/: index.ts
(+70 files in other folders)
