[package]
name = "quant-x"
version = "0.1.0"
description = "Quant X Live — Desktop Trading Application"
authors = ["Quant X Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
dotenv = "0.15"
thiserror = "2"
futures-util = "0.3"
url = "2"
once_cell = "1"

[dev-dependencies]
tokio-test = "0.4"

[lib]
name = "quant_x_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
